# serializer version: 1
# name: test_av1_codec_args_snapshot[crf_hdr]
  tuple(
    '-c:v libsvtav1 -pix_fmt yuv420p10le -colorspace bt2020nc -color_primaries bt2020 -color_trc arib-std-b67 -preset 6 -svtav1-params tune=0:mbr=4000k -qmin 15 -crf 23 -qmax 36  -force_key_frames 1 -g 30',
    '',
    '-f mp4 -r (30*1)',
  )
# ---
# name: test_av1_codec_args_snapshot[crf_sdr_default]
  tuple(
    '-c:v libsvtav1 -pix_fmt yuv420p -preset 6 -svtav1-params tune=0:mbr=4000k -qmin 15 -crf 23 -qmax 36  -force_key_frames 1 -g 30',
    '',
    '-f mp4 -r (30*1)',
  )
# ---
# name: test_av1_codec_args_snapshot[crf_with_mbr_cap]
  tuple(
    '-c:v libsvtav1 -pix_fmt yuv420p -preset 6 -svtav1-params tune=0:mbr=2000k -qmin 15 -crf 23 -qmax 36  -force_key_frames 1 -g 30',
    '',
    '-f mp4 -r (30*1)',
  )
# ---
# name: test_av1_codec_args_snapshot[target_size_vbr]
  tuple(
    '-c:v libsvtav1 -pix_fmt yuv420p -preset 6 -svtav1-params tune=0:rc=1  -b:v 12MB -force_key_frames 1 -g 30',
    '',
    '-f mp4 -r (30*1)',
  )
# ---
# name: test_av1_codec_args_snapshot[two_pass_vbr]
  tuple(
    '-c:v libsvtav1 -pix_fmt yuv420p -preset 6 -svtav1-params tune=0:rc=1  -b:v 4000k -force_key_frames 1 -g 30',
    '',
    '-f mp4 -r (30*1)',
  )
# ---
